test/files/neg/t2336.check
t2336.scala:6: error: Foo[Int] is not a legal prefix for a constructor
  new Foo[Int]#Bar(0)
               ^
one error found
